--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,35 @@
 body {
   margin: 0;
+  padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  overflow-x: hidden;
+}
+body::-webkit-scrollbar{
+  width: .5vw;
+  border-radius: 2rem;
+}
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: rgba(102, 102, 102, 0.6); 
+  border-radius: 2rem;
 }
 
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: rgba(102, 102, 102, 1);  
+}
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+.p-slidemenu{
+  height: 75vh;
+  border: none !important;
+}
+.p-slidemenu-wrapper{
+  height: 100% !important;
 }
