--- a/src/menu-home/menu.css
+++ b/src/menu-home/menu.css
@@ -1,7 +1,7 @@
 .menu{
     display: flex;
     justify-content: space-between;
-    width: 100vm;
+    width: 100vw;
 }
 .menuMobile{
     display: none;
