--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,13 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: "Poppins", sans-serif !important;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   overflow-x: hidden;
+}
+.p-component{
+  font-family: "Poppins", sans-serif !important;
 }
 body::-webkit-scrollbar{
   width: .5vw;
@@ -22,10 +23,6 @@ body::-webkit-scrollbar{
 ::-webkit-scrollbar-thumb:hover {
   background: rgba(102, 102, 102, 1);  
 }
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
 .p-slidemenu{
   height: 75vh;
   border: none !important;
@@ -34,5 +31,25 @@ code {
   height: 100% !important;
 }
 .p-card{
+  box-shadow: none !important;
+}
+.p-menubar{
+  justify-content: space-between;
+  padding: .5rem 1rem .5rem 1rem !important;
+}
+.p-menubar .p-menubar-custom, .p-menubar .p-menubar-end{
+  margin-left: 0 !important;
+}
+.p-button{
+  background-color:  #62c14b !important;
+  border-color: #62c14b !important;
+}
+.p-card .p-card-content{
+  padding: 0 !important;
+}
+.p-card .p-card-body{
+  padding: 0 !important;
+}
+.p-shadow-2{
   box-shadow: none !important;
 }
