--- a/src/carrinho/cardCarrinho.css
+++ b/src/carrinho/cardCarrinho.css
@@ -1,22 +1,10 @@
-.chip{
-    display: flex;
-    width: 100%;
+.tag p{
+    padding: .65rem .25rem .65rem .25rem;
+    color: rgb(255, 255, 255);
+    background-color: #59714f;
+    font-size: small;
+    position: absolute;
   }
-  .chip p{
-  padding: .5rem;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  color: rgb(230, 230, 230);
-  background-color: rgb(49, 49, 49);
-  border-radius: 16px;
-  font-size: medium;
-}
-.chipGroup{
-    width: 40%;
-    display: flex;
-    
-}
 .btns{
     gap:.5rem
 }
