--- a/src/index.css
+++ b/src/index.css
@@ -41,8 +41,8 @@ body::-webkit-scrollbar{
   margin-left: 0 !important;
 }
 .p-button{
-  background-color:  #62c14b !important;
-  border-color: #62c14b !important;
+  background-color:  #59714f !important;
+  border-color: #59714f !important;
 }
 .p-card .p-card-content{
   padding: 0 !important;
