--- a/src/produtos/card.css
+++ b/src/produtos/card.css
@@ -11,9 +11,10 @@
   display: grid;
   grid-auto-flow: column;
   justify-content: space-between;
-  align-items: flex-start;
+  align-items: center;
   gap: .25rem;
   margin: 0.5rem;
+  margin-top: -.75rem;
   color: rgb(50, 50, 50);
   font-size: smaller;
   font-weight: 600;
@@ -34,20 +35,38 @@ p {
   font-size: 0.75rem;
   color: rgb(88, 88, 88);
 }
-.price{
-    display: flex;
-    width: 100%;
-  }
-  .price p{
-  padding: .5rem;
+.chip{
   display: flex;
   align-items: center;
-  justify-content: center;
-  color: rgb(230, 230, 230);
-  background-color: rgb(49, 49, 49);
-  border-radius: 16px;
+  gap: .5rem;
+  width: 100%;
+}
+.chip p{
+padding: .75rem;
+display: flex;
+align-items: center;
+justify-content: center;
+color: rgb(255, 255, 255);
+background-color: #59714f;
+border-radius: 16px;
+font-size: small;
+font-weight: bold;
+}
+.chipGroup{
+  width: 40%;
+  gap: .5rem;
+  display: flex;
+  
+}
+.tag p{
+  padding: .65rem .25rem .65rem .25rem;
+  color:#62c14b;
+  background-color: rgb(37, 37, 37);
+  font-size: small;
+  position: absolute;
+}
+#qtd{
   font-size: medium;
-  height: 100%;
 }
 .img{
   cursor: pointer;
@@ -68,4 +87,24 @@ p {
   display: flex;
   width: 100%;
   justify-content: space-between;
+}
+.p-button-secondary{
+  background-color: white !important;
+  border-color: lightgray !important;
+  color: black !important;
+}
+#desconto{
+  font-size: .85rem;
+}
+#quantidade{
+  padding: 1rem 1.25rem 1rem 1.25rem;
+}
+
+@media(max-width: 960px){
+  .chipGroup{
+    width: 100%;
+    gap: .5rem;
+    display: flex;
+    
+  }
 }
